# foocattp

./: CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  README.md  pyproject.toml
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
docs/source/: foocattp.rst  modules.rst
tests/: test_foocattp.py
