[tool.poetry]
name = "foocattp"
version = "0.1.0"
description = "Python package that eases the pain concatenating Pandas categoricals!"
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^1.0.1"

[tool.poetry.dev-dependencies]
sphinx = "^2.4.3"
sphinxcontrib-napoleon = "^0.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
